Fixed music bot button stuck behind preview image

--- a/shared/js/ui/frames/side/HeaderRenderer.scss
+++ b/shared/js/ui/frames/side/HeaderRenderer.scss
@@ -179,8 +179,6 @@
             .left {
                 margin-right: 8.5em;
             }
-
-            width: 60em; /* same width  so flex-shrik applies equaly */
         }
     }
 }
